<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<modules>
		<module>core</module>
		<module>app</module>
		<module>qdist011</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.1</version>
	</parent>

	<groupId>no.nav.dokdistdpi</groupId>
	<artifactId>dokdistdpi</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<java.version>17</java.version>
		<activemq.version>5.16.3</activemq.version>
		<awaitility.version>4.1.1</awaitility.version>
		<aws-s3.version>1.12.125</aws-s3.version>
		<bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
		<camel.version>3.13.0</camel.version>
		<commons-asic.version>0.9.5</commons-asic.version>
		<commons-io.version>2.11.0</commons-io.version>
		<dokkat.version>11.0.5</dokkat.version>
		<ibm-mq.version>9.2.4.0</ibm-mq.version>
		<java.version>17</java.version>
		<lombok.version>1.18.22</lombok.version>
		<logstash-logback-encoder.version>7.0.1</logstash-logback-encoder.version>
		<melding-virksomhet-dokdistfordeling.version>2.1.2</melding-virksomhet-dokdistfordeling.version>
		<maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
		<bnimbus-jose-jwt.version>9.15.2</bnimbus-jose-jwt.version>
		<spring-cloud-contract-wiremock.version>3.1.0</spring-cloud-contract-wiremock.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>schema</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!--Apache -->
			<dependency>
				<groupId>org.apache.activemq</groupId>
				<artifactId>activemq-jms-pool</artifactId>
				<version>${activemq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-jms</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-jaxb</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-core</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-json-validator</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<!--IBM MQ -->
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.allclient</artifactId>
				<version>${ibm-mq.version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>

			<!--Encryption-->
			<dependency>
				<groupId>no.difi.commons</groupId>
				<artifactId>commons-asic</artifactId>
				<version>${commons-asic.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bcprov-jdk15on.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${bnimbus-jose-jwt.version}</version>
			</dependency>
			<!--Storage S3-->
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-s3</artifactId>
				<version>${aws-s3.version}</version>
			</dependency>

			<!--Tjenester-->
			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>melding-virksomhet-dokdistfordeling</artifactId>
				<version>${melding-virksomhet-dokdistfordeling.version}</version>
			</dependency>

			<!--Dokkat-->
			<dependency>
				<groupId>no.nav.dokkat</groupId>
				<artifactId>dokkat-api</artifactId>
				<version>${dokkat.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokkat</groupId>
				<artifactId>dokkat-schemas</artifactId>
				<version>${dokkat.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.activemq</groupId>
				<artifactId>activemq-broker</artifactId>
				<version>${activemq.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-test-spring</artifactId>
				<version>${camel.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>17</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>